[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptool"
version = "1.0.0"
description = "File/folder encryption"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41"
]

[tool.setuptools]
packages = ["cryptool"]